feat: 0.8.3 - new mcp client from 0.10.0